--- a/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
@@ -20,6 +20,7 @@
     </data>
 
     <ScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -202,6 +203,7 @@
                         </LinearLayout>
 
                         <View
+                            android:visibility="@{diveCenterViewModel.diveCenterProfile.newInstructors ? View.VISIBLE : View.GONE}"
                             android:layout_width="6dp"
                             android:layout_height="6dp"
                             android:layout_centerVertical="true"
