--- a/trunk/ddscanner/app/src/main/res/layout/item_instructor.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_instructor.xml
@@ -22,6 +22,7 @@
             style="@style/DividerStyleFull"
             android:layout_alignParentBottom="true"/>
         <TextView
+            android:layout_toLeftOf="@+id/remove"
             android:id="@+id/is_new"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,11 +31,17 @@
             android:paddingBottom="3dp"
             android:paddingRight="7dp"
             android:paddingLeft="7dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="10dp"
             android:text="NEW"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:background="@drawable/red_rectangle"/>
+        <ImageView
+            android:layout_marginRight="20dp"
+            android:id="@+id/remove"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_addds_delete"
+            android:layout_alignParentRight="true"/>
     </RelativeLayout>
 </LinearLayout>
