--- a/trunk/ddscanner/app/src/main/res/layout/fragment_user_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_user_profile.xml
@@ -13,7 +13,7 @@
 
         <variable
             name="userProfileViewModel"
-            type="com.ddscanner.screens.profile.ProfileFragmentViewModel" />
+            type="com.ddscanner.screens.profile.user.ProfileFragmentViewModel" />
 
         <variable
             name="handlers"
