--- a/trunk/ddscanner/app/src/main/res/layout/fragment_dive_center_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_dive_center_profile.xml
@@ -12,7 +12,7 @@
 
         <variable
             name="diveCenterViewModel"
-            type="com.ddscanner.screens.profile.DiveCenterProfileFragmentViewModel" />
+            type="com.ddscanner.screens.profile.divecenter.DiveCenterProfileFragmentViewModel" />
 
         <variable
             name="handlers"
