~ (WIP) change views state accordin login

--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -186,6 +186,7 @@
                             android:scaleType="centerCrop"
                             android:src="@drawable/divider" />
                         <RelativeLayout
+                            android:id="@+id/workin_layout"
                             android:layout_width="match_parent"
                             android:layout_height="58dp"
                             android:background="@color/white"
