--- a/trunk/ddscanner/app/src/main/res/layout/item_add_photo_to_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_add_photo_to_dive_spot.xml
@@ -14,13 +14,6 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_addds_plus"/>
-    <TextView
-        android:layout_marginTop="3dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:textColor="#a9a9a9"
-        android:text="@string/add_photo_btn"/>
+        android:src="@drawable/ic_add_photo"/>
     </LinearLayout>
 </LinearLayout>
